SimpleComplex/Config 1.x, 2018-06-23
------------------------------------
- Competing associative keys (and sub-keys) both having non-array value
  within same ini path (base, override) is now illegal; because there can't
  be any guarantee that the same value will 'win' on every config refresh.
- New .ini file discovery mode, using base path file
  config.[store-name].discover-ini-source-packages.ini.
  Backwards compatible.
- CLI config-refresh options allow-none and verbose.

SimpleComplex/Config 1.x, 2018-06-19
------------------------------------
- Use Utils PathList instead of deprecated predecessor.
- Release 1.4.

SimpleComplex/Config 1.x, 2018-04-07
------------------------------------
- Package requires Utils package ^1.2.
- CLI config-set option 'array' (-r) to set 'json' (object) value as array.
- Release 1.3.

SimpleComplex/Config 1.x, 2018-03-26
------------------------------------
- Sectioned config interface now extends the Utils package's general use
  sectioned hashmap interface to avoid forcing dependency of this package
  when not strictly required.

SimpleComplex/Config 1.x, 2017-10-10
------------------------------------
- .ini sectioned flat config support long cache keys.
- Release 1.2.

SimpleComplex/Config 1.x, 2017-10-03
------------------------------------
- Fix that (sectioned config) empty section must be object, not array;
  PHP json_encode() encodes empty array as array, even in non-assoc mode.
- Release 1.1.1.

SimpleComplex/Config 1.x, 2017-09-24
------------------------------------
- Release 1.1.

SimpleComplex/Config 1.x, 2017-09-22
------------------------------------
- Major bug fix: eliminated risk of dupe key scalar values become array.
  Removed warnings from .ini-files' documentation.

SimpleComplex/Config 1.x, 2017-09-02
------------------------------------
- ConfigKey accommodated to fit altered Cache\CacheKey.
- Interfaces moved to sub dir/namespace.

SimpleComplex/Config 1.x, 2017-08-30