@@ -1,8 +1,6 @@
-; 'global' store - place this file in the base path.
+; 'global' store
+; Packages providing *.global.ini files - place this file in the 'base' path.
 ;-------------------------------------------------------------------------------
-; Composer vendor dir relative to document root.
-vendor-dir = backend/vendor
-
 [packages-by-vendors]
 ; *: all packages under vendor.
 ; list: specific packages under vendor.
