@@ -1,3 +1,11 @@
+SimpleComplex/Config 1.x, 2018-06-24
+------------------------------------
+- Config store names 'example' and 'ini-source-packages' are now illegal.
+- Renamed ini source packages lists' extension, and they shall no longer contain
+  vendor-dir; uses Utils vendorDir() instead.
+- Path names are certainly allowed to be integers; because the path list may
+  well be numerically indexed list.
+
 SimpleComplex/Config 1.x, 2018-06-23
 ------------------------------------
 - Competing associative keys (and sub-keys) both having non-array value
